--- a/vars/.test.yml
+++ b/vars/.test.yml
@@ -1,11 +1,11 @@
-pg_users:
+postgres_users:
   - name: 'test1'
   - name: 'test2'
     pass: 'test2_password'
   - name: 'test3'
     pass: 'test3_password'
     role_attr_flags: 'LOGIN'
-pg_databases:
+postgres_databases:
   - name: 'test1'
   - name: 'test2'
     owner: 'test2'
@@ -17,12 +17,12 @@ pg_databases:
     extensions: 
       - "pg_buffercache"
       - "pg_stat_statements"
-pg_hba_settings:
+postgres_hba_settings:
   - { value: 'host test1 postgres 127.0.0.1/32 md5'}
   - { value: 'host test2 postgres 127.0.0.1/32 md5', state: 'present' }
   - { value: 'host test2 test2 192.168.122.0/24 md5' }
   - { value: 'host test3 test2 192.168.100.0/24 md5', state: 'absent'}
-pg_settings:
+postgres_settings:
   - { name: 'listen_addresses', value: '*' }
   - { name: 'shared_preload_libraries', value: 'pg_stat_statements' }
   - { name: 'lc_messages', value: 'en_US.UTF-8' }
