--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,4 +45,4 @@ postgres_settings: []
 
 postgres_apt_key_id: ACCC4CF8
 postgres_apt_key_url: "https://www.postgresql.org/media/keys/ACCC4CF8.asc"
-postgres_apt_repository: 'deb http://apt.postgresql.org/pub/repos/apt/ {{ansible_distribution_release}}-pgdg main {{version}}'
+postgres_apt_repository: 'deb http://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main {{ postgres_version }}'
