--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -5,13 +5,13 @@
 
 - name: Add PostgreSQL repository apt-key
   apt_key:
-    id: "{{ apt_key_id }}"
-    url: "{{ apt_key_url }}"
+    id: "{{ postgres_apt_key_id }}"
+    url: "{{ postgres_apt_key_url }}"
     state: present
 
 - name: Add PostgreSQL repository
   apt_repository:
-    repo: "{{ apt_repository }}"
+    repo: "{{ postgres_apt_repository }}"
     state: present
   register: pg_repo
 
@@ -25,13 +25,13 @@
     name: "{{item}}"
     state: present
   with_items:
-    - "postgresql-{{version}}"
-    - "postgresql-client-{{version}}"
-    - "postgresql-contrib-{{version}}"
+    - "postgresql-{{ postgres_version }}"
+    - "postgresql-client-{{ postgres_version }}"
+    - "postgresql-contrib-{{ postgres_version }}"
 
 - name: Install psycopg2
   apt:
     name: "python-psycopg2"
     state: present
     cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
-  when: pg_users or pg_databases
+  when: postgres_users or postgres_databases
