--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,5 +1,7 @@
 ---
 - name: Converge
+  vars:
+    ansible_python_interpreter: "/usr/bin/python3"
   hosts: all
   become: 'yes'
   become_method: sudo
